# hilbert-kernel

./: .gitignore  BUILD  Makefile.am  README  TODO  configure.ac
doc/: Doxyfile.in  Makefile.am  aminclude.am
src/: Makefile.am  export.c  expr.c  functor.c  hilbert.h  import.c  kind.c  misc.c  module.c  object.c  param.h  private.h  var.c
src/cl/: bimap.template.h  eset.h  evector.h  hash.h  iset.h  ivector.h  map.template.h  mset.h  ovector.h  pmap.h  set.template.h  smap.h  util.h  vector.template.h
src/threads/: hthreads.h  threads.h
tests/: Makefile.am  ancillary.c  eqc.c  export.c  expr_array.c  expr_build.c  expr_create.c  expr_fromarray.c  expr_get.c  expr_sub.c  expr_vars.c  functor_create.c  functor_getinputkinds.c  functor_getkind.c  getobjects.c  immutable.c  import.c  kind_alias.c  kind_create.c  kind_eq.c  kind_id.c  kind_vs_vkind.c  module.c  object_getdesthandle.c  object_getparam.c  object_getsource.c  object_getsourcehandle.c  objecttype.c  param.c  var_create.c  var_getkind.c  veqc.c  vkind_alias.c  vkind_create.c  vkind_eq.c  vkind_id.c
