dnl
dnl The Hilbert Kernel Library, a library for verifying formal proofs.
dnl Copyright © 2011, 2012 Alexander Klauer
dnl
dnl This program is free software: you can redistribute it and/or modify
dnl it under the terms of the GNU General Public License as published by
dnl the Free Software Foundation, either version 3 of the License, or
dnl (at your option) any later version.
dnl
dnl This program is distributed in the hope that it will be useful,
dnl but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
dnl GNU General Public License for more details.
dnl
dnl You should have received a copy of the GNU General Public License
dnl along with this program.  If not, see <http://www.gnu.org/licenses/>.
dnl
dnl To contact the author
dnl    by email: Graf.Zahl@gmx.net
dnl    on wiki : http://www.wikiproofs.org/w/index.php?title=User_talk:GrafZahl
dnl

AC_INIT([hilbert-kernel], [0.1], [Graf.Zahl@gmx.net])
AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_SRCDIR([src/hilbert.h])
AC_CONFIG_AUX_DIR([build-aux])
AM_INIT_AUTOMAKE([foreign -Wall -Werror])
AC_PROG_CC_C99
AC_PROG_CC_C_O
AC_PROG_LIBTOOL
AC_PROG_SED
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile src/Makefile tests/Makefile])
AC_OUTPUT
